# vla_kitting

./: .gitignore  CLAUDE.md  CLAUDE_CODE_PLAN.md  VLA_KITTING_PLAN.md  justfile  pyproject.toml  requirements.lock.txt
.beads/: issues.jsonl  metadata.json
assets/: hc10dt_v1.urdf.xacro  hc10dt_with_gripper_v1.urdf.xacro  hc10dt_with_ria_gripper.urdf.xacro  robotiq_2f85_v1.urdf.xacro  robotiq_arg2f.urdf.xacro  robotiq_arg2f_85_macro.urdf.xacro
configs/: eval_seed_30.json  isaac_headless_with_urdf.kit  isaaclab.headless.urdf.kit
envs/: __init__.py  quat_utils.py  yaskawa_pick_cube_cfg.py  yaskawa_pick_cube_mimic_env.py  yaskawa_pick_cube_mimic_env_cfg.py  yaskawa_robot_cfg.py
kitting_vla/: package.xml  setup.py
kitting_vla/config/: train_config.yaml  vla_cell_config.yaml
kitting_vla/kitting_vla/: data_collector_node.py  episode_manager.py  episode_manager_node.py  safety_wrapper.py  vla_inference_node.py
kitting_vla/launch/: collect_data.launch.py  vla_inference.launch.py
kitting_vla/scripts/: convert_dataset.py  eval_sim.py  train_octo.py
kitting_vla/test/: test_data_collector.py  test_episode_manager.py  test_safety_wrapper.py  test_vla_inference.py
logs/: PROGRESS.json  phase_0_clarifications.json  phase_0_scene_manifest.json  scene_dump.json  scene_dump_combined.json  scene_dump_natfreq.json  scene_dump_nvidia.json  scene_dump_old_style.json  scene_dump_v1.json
patches/: README.md  isaaclab-urdf-pin-relax.patch  lerobot-peft-resume-and-groot.patch
reports/: 15hz_investigation_2026-04-24.md  2026-04-26_attention_diagnosis_and_v5_plan.md  2026-04-26_attention_diagnostic_invalidated.md  2026-04-26_eval_ghost_cube_investigation.md  2026-04-26_eval_harness_fixed_seed_30.md  2026-04-26_overnight_session_summary.md  2026-04-26_run_b_prime_config_diff.md  2026-04-26_scene_data_integrity_pack.md  2026-04-27_2hp_scripted_phase_stretch.md  2026-04-27_8rf_parallel_demo_orchestrator.md  2026-04-27_camera_resolution_and_framing.md  2026-04-27_mu7_vision_probe_new_camera.md  2026-04-27_scripted_only_data_pipeline.md  2026-04-27_smolvla_best_practices_audit.md  2026-04-27_smolvla_vision_input_verification.md  2026-04-27_v5_run_diary.md  2026-04-27_vision_feature_probe.md  README.md  known_issues.md  next_steps.md  next_training_plan.md  overnight_run_2026-04-23.md  overnight_run_2026-04-24.md  phase_7_findings.md  recovery_plan_2026-04-24.md  (+8 more)
(+84 files in other folders)
